<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bbg"
    tools:context=".Instructions_page">

    <TextView
        android:id="@+id/tv6"
        android:layout_width="255dp"
        android:layout_height="49dp"
        android:layout_marginTop="61dp"
        android:backgroundTint="#ffffff"
        android:text="@string/instruction"
        android:textColor="@android:color/primary_text_light"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv7"
        android:layout_width="392dp"
        android:layout_height="47dp"
        android:layout_marginTop="28dp"
        android:text="@string/please_follow_the_steps_below_to_set_up_your_account"
        android:textSize="18sp"
        android:textColor="@android:color/primary_text_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv6" />

    <TextView
        android:id="@+id/tv8"
        android:layout_width="298dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:text="@string/_1_register_your_phone_number"
        android:textColor="@android:color/primary_text_light"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.164"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv7" />

    <TextView
        android:id="@+id/tv9"
        android:layout_width="259dp"
        android:layout_height="33dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:text="@string/_2_register_your_guardians_number"
        android:textColor="@android:color/primary_text_light"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.117"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv8" />

    <TextView
        android:id="@+id/tv10"
        android:layout_width="370dp"
        android:layout_height="46dp"
        android:layout_marginStart="10dp"
        android:text="@string/_3_always_maintain_working_internet_connections"
        android:textColor="@android:color/primary_text_light"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.451"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.452" />

    <TextView
        android:id="@+id/tv11"
        android:layout_width="367dp"
        android:layout_height="63dp"
        android:layout_marginEnd="20dp"
        android:text="@string/_4_shake_your_phone_incase_of_emergency_to_alert_your_guardian"
        android:textColor="@android:color/primary_text_light"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.549" />

    <TextView
        android:id="@+id/tv12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="136dp"
        android:text="@string/let_s_start_nowW"
        android:textColor="@android:color/primary_text_light"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.127"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv11" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:text="@string/main_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv12" />

</androidx.constraintlayout.widget.ConstraintLayout>