<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bbg"
    tools:context=".Menu_page">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilRegister"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:background="@android:color/holo_purple"
        android:backgroundTint="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:hint="@string/register"
            android:textAlignment="center" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilInstructions"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="24dp"
        android:background="#ffffff"
        android:backgroundTint="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilRegister">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etInstructions"
            android:layout_width="match_parent"
            android:background="@android:color/transparent"
            android:layout_height="match_parent"
            android:hint="@string/instructions" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilViewRegistered"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="#ffffff"
        app:layout_constraintEnd_toEndOf="@id/tilInstructions"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/tilInstructions"
        app:layout_constraintTop_toBottomOf="@+id/tilInstructions">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etViewRegistered"
            android:layout_width="match_parent"
            android:backgroundTint="#ffffff"
            android:layout_height="wrap_content"
            android:hint="@string/view_registered"
            app:textInputLayoutFocusedRectEnabled="false" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilRegistermn"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#ffffff"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilViewRegistered">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etRegistermn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#ffffff"
            android:hint="@string/register_mobile_number"
            app:textInputLayoutFocusedRectEnabled="false" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
